reference-llvm/tests/should-fail/fail26.mu
// no args for @handler w/ always

function @entry foo() {
    scope (always) bar;
}

function @handler bar(x) {
    ;
}
